fixed spacing issues

--- a/src/app/academypage/stats/stats.component.css
+++ b/src/app/academypage/stats/stats.component.css
@@ -1,7 +1,6 @@
-/* .stats{
-    height: 100%;
-    max-height: 400px;
-} */
+.stats{
+    height: auto;
+}
 
 .centered {
     position: absolute;
@@ -17,8 +16,8 @@
 }
 
 .about {
-    width: 170px;
-    height: 170px;
+    width: 150px;
+    height: 150px;
 }
 
 .contain h3{
@@ -30,4 +29,11 @@
 .stat-container{
     width: auto;
     height: auto;
+}
+
+.image img{
+    height: 180px; 
+    width: 50%;
+    margin-left: 50px;
+
 }
